position mobile fixed

--- a/src/index.css
+++ b/src/index.css
@@ -85,7 +85,7 @@ h5 {
 .container{
   width: 80vw;
   max-width: 600px;
-  margin: 13rem auto;
+  margin: 7rem auto;
   text-align: center;
   position: relative;
   
